# ingot

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  coding_standards.md  ingot.cpp  ingot.h
docs/superpowers/plans/: 2026-07-04-doctest-integration.md  2026-07-04-string-types.md  2026-07-05-view-type.md  2026-07-09-format-customization.md  2026-07-10-format-traits.md
docs/superpowers/specs/: 2026-07-04-doctest-integration-design.md  2026-07-04-static-vector-design.md  2026-07-04-string-types-design.md  2026-07-05-view-type-design.md  2026-07-09-format-customization-design.md  2026-07-10-format-traits-design.md
tests/: CMakeLists.txt  test_static_vector.cpp  test_string.cpp  test_view.cpp
